[package]
name = "cargo-todoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = { version = "3.1.12", features = ["derive"] }
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
regex = "1.5.5"
tokio = { version = "1.17.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
